# grundy_coloring

./: README.md  pyproject.toml  requirements.txt
grundy/: __init__.py  bb.py  bb_grundy.py  enumerative.py  experiment_analysis.py  experiment_analysis2.py  formulation.py  greedy_coloring.py  grundy_bitmask.py  lower_bound.py  slo_vs_random_experiment.py  teste.py  teste_slo.py  upper_bound.py  vertex_ordering.py
grundy/results/: smallest_last_20260425_101054.json  smallest_last_20260425_114452.json  smallest_last_20260425_122925.json  smallest_last_20260425_125056.json  smallest_last_ordering_20260502_190636.json  smallest_last_ordering_20260502_191750.json  smallest_last_ordering_20260502_201631.json  smallest_last_ordering_20260502_205918.json  smallest_last_ordering_20260502_211616.json  smallest_last_ordering_20260502_211801.json
grundy/table/: formulation (copy).tex  formulation.tex  formulation_results.aux  formulation_results.tex  tabela.tex
grundy/teste_rank_medio/: analise_normalidade (copy).py  analise_normalidade.py  explicacao_teste_slo.aux  explicacao_teste_slo.out  explicacao_teste_slo.tex  rank_medio_multiplicidade.py  tamanho_amostral.py  teste_rank_medio.py
grundy/teste_solver/: experiment_analysis.py  teste_slo.py
tests/: test_grundy.py
